# -CCII-proyecto

./: README.md  README_MANUAL.md  cc_proyectofinal_22 .sql  cc_proyectofinal_22_v1.sql  main.cpp  newmed.cpp  newmed.h  newmed.ui  newpac.cpp  newpac.h  newpac.ui
CMakeDBTest/: CMakeLists.txt  CMakeLists.txt.user.d14c2d3  DBConexion.h  citascalendar.cpp  citascalendar.h  citascalendar.ui  citascalendarpac.cpp  citascalendarpac.h  citascalendarpac.ui  crearcargo.h  crearmed.cpp  crearmed.h  crearpac.cpp  crearpac.h  dialog_agregar_citas.cpp  dialog_agregar_citas.h  dialog_agregar_citas.ui  functorOperaciones.cpp  functorOperaciones.h  login.cpp  login.h  login.ui  main.cpp  medico.cpp  medico.h  menudoctor.cpp  menudoctor.h  menudoctor.ui  menupaciente.cpp  menupaciente.h  menupaciente.ui  newmed.cpp  newmed.h  newmed.ui  newpac.cpp  newpac.h  newpac.ui  vistaadm.cpp  vistaadm.h  vistaadm.ui  (+3 more)
build-CMakeDBTest-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-CMakeDBTest-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/CMakeDBTest_autogen/: deps  mocs_compilation.cpp
build-CMakeDBTest-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/CMakeDBTest_autogen/EWIEGA46WW/: moc_citascalendar.cpp  moc_citascalendar.cpp.d  moc_citascalendarpac.cpp  moc_citascalendarpac.cpp.d  moc_dialog_agregar_citas.cpp  moc_dialog_agregar_citas.cpp.d  moc_login.cpp  moc_login.cpp.d  moc_menudoctor.cpp  moc_menudoctor.cpp.d  moc_menupaciente.cpp  moc_menupaciente.cpp.d  moc_newmed.cpp  moc_newmed.cpp.d  moc_newpac.cpp  moc_newpac.cpp.d  moc_vistaadm.cpp  moc_vistaadm.cpp.d  moc_widget.cpp  moc_widget.cpp.d
build-CMakeDBTest-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/CMakeDBTest_autogen/include/: ui_citascalendar.h  ui_citascalendarpac.h  ui_dialog_agregar_citas.h  ui_login.h  ui_menudoctor.h  ui_menupaciente.h  ui_newmed.h  ui_newpac.h  ui_vistaadm.h  ui_widget.h
